--- a/home.html
+++ b/home.html
@@ -491,160 +491,64 @@
     <script type="text/javascript">
         // Responsive Design for trending projects
         $(document).ready(function () {
-            $('#first1').owlCarousel({
-                loop: true,
-                margin: 10,
-                autoplayTimeout: 2000,
-                autoplayHoverPause: true,
-                responsiveClass: true,
-                responsive: {
-                    0: {
-                        items: 1,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true
-                    },
-                    600: {
-                        items: 2,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-                    },
-                    860: {
-                        items: 3,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
+    $('#first1').owlCarousel({
+        loop: true,
+        margin: 10,
+        autoplayTimeout: 2000,
+        autoplayHoverPause: true,
+        responsiveClass: true,
+        nav: true,
+        responsive: {
+            0: { items: 1, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                600: { items: 2, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                860: { items: 3, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                1352: { items: 4, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                navText : ['<i class="fa fa-angle-left" aria-hidden="true"></i>','<i class="fa fa-angle-right" aria-hidden="true"></i>'],
+        }
+    });
 
-                    },
-                    1352: {
-                        items: 4,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
+    $('#second2').owlCarousel({
+        loop: true,
+        margin: 10,
+        autoplayTimeout: 1000,
+        autoplayHoverPause: true,
+        responsiveClass: true,
+        nav: true,
+        responsive: {
+            0: { items: 2, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                600: { items: 3, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                860: { items: 4, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                1352: { items: 6, margin: 20, touchDrag: true, freeDrag: true, dots: false, autoplay: true, nav: true },
+                navText : ['<i class="fa fa-angle-left" aria-hidden="true"></i>','<i class="fa fa-angle-right" aria-hidden="true"></i>'],
+        }
+    });
 
-                    }
-                }
-            });
-            $('#second2').owlCarousel({
-                loop: true,
-                margin: 10,
-                responsiveClass: true,
-                responsive: {
-                    0: {
-                        items: 2,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true
-
-                    },
-                    600: {
-                        items: 3,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-                    },
-                    860: {
-                        items: 4,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-
-                    },
-                    1352: {
-                        items: 6,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-
-                    }
-                }
-            });
-
-            $('#third3').owlCarousel({
-                loop: true,
-                margin: 10,
-                responsiveClass: true,
-                responsive: {
-                    0: {
-                        items: 1,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-                        navigation: true,
-                navigationText: ["", ""]
-
-                    },
-                    600: {
-                        items: 2,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-                        navigation: true,
-                navigationText: ["", ""]
-                    },
-                    860: {
-                        items: 4,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-                        navigation: true,
-                navigationText: ["", ""]
-
-                    },
-                    1352: {
-                        items: 5,
-                        nav: true,
-                        margin: 20,
-                        touchDrag: true,
-                        freeDrag: true,
-                        dots: false,
-                        autoplay: true,
-                        navigation: true,
-
-                    }
-                }
-            });
-        });
+    $('#third3').owlCarousel({
+        loop: true,
+        margin: 10,
+        autoplayTimeout: 1500,
+        autoplayHoverPause: true,
+        responsiveClass: true,
+        dots: false,
+        nav: true,
+        responsive: {
+            0: { items: 1, margin: 20, touchDrag: true, freeDrag: true, autoplay: true },
+            600: { items: 2, margin: 20, touchDrag: true, freeDrag: true, autoplay: true },
+            860: { items: 4, margin: 20, touchDrag: true, freeDrag: true, autoplay: true },
+            1312: { items: 5, margin: 20, touchDrag: true, freeDrag: true, autoplay: true },
+            1603: { items: 5, margin: 20, touchDrag: true, freeDrag: true, autoplay: true, nav: true },
+            navText : ['<i class="fa fa-angle-left" aria-hidden="true"></i>','<i class="fa fa-angle-right" aria-hidden="true"></i>'],
+        }
 
 
+        
+    });
 
-
-
-
+    $('.owl-carousel').find('.owl-nav').removeClass('disabled');
+    $('.owl-carousel').on('changed.owl.carousel', function(event) {
+	$(this).find('.owl-nav').removeClass('disabled');
+   });
+});
     </script>
 </body>
 
