Changes In home And Header For Search Is Ready

--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@
                             </tr>
                             <tr id="Search_btn">
                                 <th class="search_btn_mobile top left bottom right" id="Search_btn" colspan="2">
-                                    <center><input class="Search_btn_mob" type="submit" value="Search"></center>
+                                    <center><a href="search.html" target="_blank"><input class="Search_btn_mob" type="submit" value="Search" ></a></center>
                                 </th>
                             </tr>
                         </tbody>
@@ -188,6 +188,7 @@
                                 <h3>12 people reserching this Project</h3>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <!-- Trending Project second Image -->
