Returned With Changes

--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
                             <tr>
                                 <th class="top left bottom">Location</th>
                                 <th class="top right bottom">
-                                    <h4 id="anywhere_mobile" style="font-size: 18px; font-weight: 400;">Anywhere</h4>
+                                    <input id="Anywhere_" type="text" placeholder="Anywhere" style="text-align: center;">
 
                                 </th>
                             </tr>
