--- a/search.html
+++ b/search.html
@@ -32,7 +32,7 @@
             <h4 class="header_right_part how_its_work mobile_how_it" style="font-size: 16px;"><a href="#Home">HOW IT WORKS</a></h4>
             <h4 class="header_right_part contact_us_heading" style="font-size: 16px;"><a href="#Home">CONTACT US</a></h4>
             <div class="rightsection">
-              <h4 ><a href="#Srch" style="padding-left: 23px; padding-right: 23px;">Login</a></h4>
+              <h4 ><a href="#Srch" style="padding-left: 23px; padding-right: 23px; font-weight: 700;">Login</a></h4>
             </div>
           </div>
         </div>
@@ -58,17 +58,17 @@
           <td id="chechboxes" style="display: flex; padding-top: 9px; margin-left: 14px;">
             <div class="checkbox-container">
               <input type="checkbox" id="cb1" style="width: 14px; height: 12px;" checked>
-              <label for="cb1" style="color: 333333; font-weight: 100;" >Volunteer </label>
+              <label for="cb1" style="color: #655f5f; font-weight: 100;" >Volunteer </label>
             </div>
             <br>
             <div class="checkbox-container">
               <input type="checkbox" id="cb2" style="width: 14px; height: 12px;">
-              <label for="cb2" style="color: 333333; font-weight: 100;">Teach</label>
+              <label for="cb2" style="color: #655f5f; font-weight: 100;">Teach</label>
             </div>
             <br>
             <div class="checkbox-container">
               <input type="checkbox" id="cb3" style="width: 14px; height: 12px;">
-              <label for="cb3" style="color: 333333; font-weight: 100;">Intern</label>
+              <label for="cb3" style="color: #655f5f; font-weight: 100;">Intern</label>
             </div>
             <br>    
 
@@ -79,10 +79,10 @@
             </div>
           </td>
 
-          <td><select id="select" name="Activity" id="activity" class="select_activity">
-              <option value="Animal Conversion" style="color: #46729d;">Animal Conversion</option>
-              <option value="Animal Conversion">Animal Conversion</option>
-              <option value="Animal Conversion">Animal Conversion</option>
+          <td><select id="select" name="Activity" id="activity" class="select_activity" style="color: #655f5f;">
+              <option value="Animal Conversion" style="color: #655f5f;">Animal Conversion</option>
+              <option value="Animal Conversion" style="color: #655f5f;">Animal Conversion</option>
+              <option value="Animal Conversion" style="color: #655f5f;">Animal Conversion</option>
             </select></td>
           <td>
             <button id="full-button"><span id="text">More filter</span>
@@ -98,12 +98,12 @@
     <!-- View For Mobile  -->
     <div class="mob_cont">
       <div class="for_brdr" style="display: flex; align-items: center; border-right: 1px solid #9a9c9e;">
-      <div class="text_res"><h5>Volunteer <span style="color: #9a9c9e;">in</span> Cambodia <span style="color: #9a9c9e;">For</span> Animal Conservation</h5></div>
-      <div class="editicon"><img src="assets/edit-icon.svg" alt="edit Icon"></div>
+      <div class="text_res"><h5>Volunteer <span style="color: #9a9c9e; font-weight: 400;">in</span> Cambodia <span style="color: #9a9c9e; font-weight: 400;">for</span> Animal Conservation</h5></div>
+      <div class="editicon"><img src="assets/edit-icon.svg" alt="edit Icon" style="height: 35px;"></div>
     </div>
       <div style="position: relative; display: inline-block;">
         <button class="more_flt_btn" type="submit"
-          style="background-color: #ffffff; color: #4cb1c3; width: 70px; border: 2px solid #4cb1c3; padding: 6px; font-size: 10px; cursor: pointer; margin-top: 45px;">
+          style="background-color: #ffffff; color: #4cb1c3; width: 70px; border: 2px solid #4cb1c3; padding: 6px; font-size: 11px; cursor: pointer; margin-top: 45px; height: 33px;">
       More Filter
         </button>
         <span class="mobile_badge"
@@ -116,13 +116,13 @@
   <Section id="main_content_search">
     <div class="srch_result">
       <div class="result329">
-        <h6 id="mob_329" style="font-size: 16px; margin-left: -4px;">329 Results</h6>
+        <h6 id="mob_329" style="font-size: 16px; margin-left: -4px; color: #655f5f; font-weight: 500;">329 Results</h6>
       </div>
       <div class="srt_rela">
         <div class="sortby">
-          <h6>Sort by:</h6>
-          <div class="relavancy">
-            <select name="resultpage" id="resultpage" style="font-size: 14px; font-weight: 200; margin-bottom: -2px;">
+          <h6 style="color: #655f5f; font-weight: 500;">Sort by:</h6>
+          <div class="relavancy" style="margin-left: 1px;">
+            <select name="resultpage" id="resultpage" style="font-size: 14px; font-weight: 200; margin-bottom: -2px; color: #655f5f; outline: none; margin-left: 2px; padding: 2px; font-weight: 500;">
               <option value="relavance">Relavancy</option>
               <option value="time">Time</option>
               <option value="last-updates">Last Updates</option>
